# trx-processor

./: .gitignore  Cargo.toml  README.md
src/: logger.rs  main.rs  processor.rs
src/model/: account.rs  error.rs  mod.rs  transaction.rs
tests/: tests.rs
tests/fixtures/: basic_deposits_withdrawals.csv  chargeback_without_dispute.csv  client_mismatch.csv  dispute_and_chargeback.csv  dispute_and_resolve.csv  dispute_without_deposit.csv  insufficient_funds.csv  multiple_clients.csv  multiple_disputes_same_tx.csv  precision_test.csv  resolve_without_dispute.csv  sample_transactions.csv  zero_and_negative.csv
