[package]
name = "trx_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.39", features = ["serde"] }
chrono = "0.4"
dashmap = "6.1"
parking_lot = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
